[gd_scene load_steps=3 format=3 uid="uid://cxhab1i60ia0t"]

[ext_resource type="Script" path="res://ui/components/ingredient_card/ingredient_card.gd" id="1_lesd4"]
[ext_resource type="PackedScene" uid="uid://5okf568cssch" path="res://scenes/ingredient_block/ingredient_block.tscn" id="2_i72fg"]

[node name="IngredientCard" type="Button"]
z_index = 1
custom_minimum_size = Vector2(150, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lesd4")
ingredient_block_scene = ExtResource("2_i72fg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Godot"
horizontal_alignment = 1

[node name="BlockContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="BlockContainer" type="Control" parent="VBoxContainer/BlockContainer2"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
mouse_filter = 2

[node name="AbilityLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
